<resources>
    <string name="app_name">USTH Weather</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="description">Description</string>
    <string name="thursday" translatable="false">Thu</string>
    <string name="sunny">Sunny</string>
    <string name="temp1">24C - 31C</string>
    <string name="cloudy">Cloudy</string>
    <string name="temp2">20C - 30C</string>
    <string name="saturday">Sat</string>
    <string name="heavy_rain">Heavy Rain</string>
    <string name="temp3">15C - 25C</string>
    <string name="sunday">Sun</string>
    <string name="snow">Snow</string>
    <string name="temp4">-5C - 5C</string>
    <string name="monday">Mon</string>
    <string name="storm">Storm</string>
    <string name="temp5">10C - 20C</string>
    <string name="tuesday" translatable="false">Tue</string>
    <string name="rain">Rain</string>
    <string name="settings">Settings</string>
    <string name="temp6">15C - 25C</string>
    <string name="wednesday">Wed</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="location">Paris</string>
    <string name="current_weather">Cloudy</string>
    <string name="friday">Fri</string>

    <string name="api_key">62f545f8bb2e86037f789033d6f6f1ee</string>

</resources>
