<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".WeatherAndForecastFragment">

    <!-- TODO: Update blank fragment layout -->

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/color1">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerInParent="true"
            android:contentDescription="@string/description"
            android:src="@drawable/cloudy" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temp2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cloudy" />

        </LinearLayout>

        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/location" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="30px"
            android:layout_marginTop="20px"
            android:layout_marginRight="30px"
            android:layout_marginBottom="30px"
            android:background="@color/white"
            android:orientation="vertical">

            <!-- TODO: Update blank fragment layout -->


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10px"
                android:layout_marginLeft="30px"
                android:layout_marginRight="30px"
                android:background="@color/white"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_margin="30px"
                    android:layout_marginRight="100px"
                    android:text="@string/thursday"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <ImageView
                    android:layout_width="130px"
                    android:layout_height="130px"
                    android:contentDescription="@string/description"
                    android:src="@drawable/sunny" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="20px"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sunny"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/temp1"
                        android:textColor="@color/black"
                        android:textSize="15sp" />
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10px"
                android:layout_marginLeft="10px"
                android:layout_marginRight="10px"
                android:background="@color/white"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_margin="30px"
                    android:layout_marginRight="100px"
                    android:text="@string/friday"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <ImageView
                    android:layout_width="130px"
                    android:layout_height="130px"
                    android:contentDescription="@string/description"
                    android:src="@drawable/cloudy" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="20px"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cloudy"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/temp2"
                        android:textColor="@color/black"
                        android:textSize="15sp" />
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10px"
                android:layout_marginLeft="10px"
                android:layout_marginRight="10px"
                android:background="@color/white"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_margin="30px"
                    android:layout_marginRight="100px"
                    android:text="@string/saturday"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <ImageView
                    android:layout_width="130px"
                    android:layout_height="130px"
                    android:contentDescription="@string/description"
                    android:src="@drawable/heavyrain" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="20px"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/heavy_rain"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/temp3"
                        android:textColor="@color/black"
                        android:textSize="15sp" />
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10px"
                android:layout_marginLeft="10px"
                android:layout_marginRight="10px"
                android:background="@color/white"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_margin="30px"
                    android:layout_marginRight="100px"
                    android:text="@string/sunday"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <ImageView
                    android:layout_width="130px"
                    android:layout_height="130px"
                    android:contentDescription="@string/description"
                    android:src="@drawable/snow" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="20px"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/snow"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/temp4"
                        android:textColor="@color/black"
                        android:textSize="15sp" />
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10px"
                android:layout_marginLeft="10px"
                android:layout_marginRight="10px"
                android:background="@color/white"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_margin="30px"
                    android:layout_marginRight="100px"
                    android:text="@string/monday"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <ImageView
                    android:layout_width="130px"
                    android:layout_height="130px"
                    android:contentDescription="@string/description"
                    android:src="@drawable/storm" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="20px"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/storm"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/temp5"
                        android:textColor="@color/black"
                        android:textSize="15sp" />
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10px"
                android:layout_marginLeft="10px"
                android:layout_marginRight="10px"
                android:background="@color/white"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_margin="30px"
                    android:layout_marginRight="100px"
                    android:text="@string/tuesday"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <ImageView
                    android:layout_width="130px"
                    android:layout_height="130px"
                    android:contentDescription="@string/description"
                    android:src="@drawable/rain" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="20px"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rain"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/temp6"
                        android:textColor="@color/black"
                        android:textSize="15sp" />
                </LinearLayout>


            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</LinearLayout>